group("example") {
  deps = [
    ":test",
    ":test_mojo_client",
    ":test_mojo_server",
    ":test_service_manager",
  ]
}

executable("test") {
  sources = [
    "logger_interface_impl.cc",
    "logger_interface_impl.h",
    "test.cc",
  ]

  deps = [
    "//base",
    "//electron/example/public/mojom",
    "//mojo/core/embedder",
  ]
}

executable("test_mojo_client") {
  sources = [ "test_mojo_client.cc" ]

  deps = [
    "//base",
    "//electron/example/public/mojom",
    "//mojo/core/embedder",
  ]
}

executable("test_mojo_server") {
  sources = [
    "test_mojo_server.cc",
    "test_mojo_server.h",
  ]

  deps = [
    "//base",
    "//electron/example/public/mojom",
    "//mojo/core/embedder",
  ]
}

executable("test_service_manager") {
  sources = [
    "logger_interface_impl.cc",
    "logger_interface_impl.h",
    "logger_service_impl.cc",
    "logger_service_impl.h",
    "service_manifest.cc",
    "service_manifest.h",
    "test_service_manager.cc",
  ]

  deps = [
    "//electron/example/public/mojom",
    "//services/service_manager",
  ]
}
